--- a/build.gradle
+++ b/build.gradle
@@ -34,12 +34,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final' 
 	runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.12.5'
 	runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.12.5'
-	// implementation 'org.springframework.ai:spring-ai-starter-vector-store-pgvector'
-	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 	annotationProcessor 'org.projectlombok:lombok'
+	compileOnly 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
