huynh update forder

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=8386
 # ==============================
 # DATABASE CONFIG
 # ==============================
-spring.datasource.url=jdbc:postgresql://localhost:5432/notebook
-spring.datasource.username=postgres
-spring.datasource.password=88888888
+spring.datasource.url=jdbc:postgresql://localhost:5432/notebooks
+spring.datasource.username=admin
+spring.datasource.password=Admin1234
 
 # Tắt auto create table
 spring.jpa.hibernate.ddl-auto=none
@@ -23,3 +23,5 @@ spring.jpa.properties.hibernate.format_sql=true
 # PGVECTOR (quan trọng)
 # ==============================
 vector.embedding-dimension=1536
+
+
