--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,9 +12,9 @@ spring:
     name: springboot-api
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/notebooks
-    username: admin
-    password: Admin1234
+    url: jdbc:postgresql://localhost:5432/notebook
+    username: postgres
+    password: 88888888
 
   jpa:
     show-sql: true
