--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,4 +51,4 @@ springdoc:
     enabled: true
 
 gemini:
-  api-key: "AIzaSyDSqhrOqhWNGeezPn78fCjnudd8-2_G2sI"
+  api-key: AIzaSyCn7GDboHpG5vy0LE2HaiNwTSwFhvDW5MY
