--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,17 +12,17 @@ spring:
     name: springboot-api
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/notebook
+    url: jdbc:postgresql://localhost:5432/notebooks
     username: postgres
     password: 88888888
 
   jpa:
     show-sql: true
+    open-in-view: false
     hibernate:
       ddl-auto: none
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
         jdbc:
           lob:
             non_contextual_creation: true
