--- a/build.gradle
+++ b/build.gradle
@@ -63,3 +63,7 @@ dependencies {
 tasks.named('bootRun') {
     sourceResources sourceSets.main
 }
+
+tasks.named('test') {
+    useJUnitPlatform()
+}
